feat: Implement a custom chat UI with support for generated UI components, removing the `flutter_chat_ui` package and environment variable handling.

--- a/_log/2026-01-16.md
+++ b/_log/2026-01-16.md
@@ -1,31 +1,236 @@
 # Log 2026-01-16
 
 ## Summary
+
 Today we made significant progress in transforming the LLM integration from a passive text generator into an **Agentic GenUI System**.
 
 ### 1. Agentic Architecture
+
 - **System Prompt**: Created `genui_system_prompt.dart` to define the "Agent" persona and available tools (`InfoCard`, `StatusBadge`).
 - **Structured Output**: Enforced a strict JSON schema (`{ text, ui_components }`) so the app can reliably parse responses.
 - **JSON Parsing**: Updated `RealGenUiContentGenerator` to extract UI components from the JSON and map them to `A2uiMessage`s.
 
 ### 2. Bug Fixes & Debugging
+
 - **Crash Fix**: Resolved "Bad state" errors by managing stream controller lifecycle and ensuring unique Surface IDs.
 - **"Ghost Widget" / State Collision**:
-    - **Issue**: Historical widgets in the chat would update to match the content of the *newest* response.
-    - **Cause**: All generated GenUI responses were reusing the same static `surfaceId` ("dynamic_surface"). Since GenUI surfaces listen to a stream by ID, *all* of them (past and present) would update when a new message with that ID arrived.
-    - **Fix**: Implemented **Unique Surface IDs** (timestamp-based) for every response in `RealGenUiContentGenerator`. Each chat bubble now renders a distinct surface.
+  - **Issue**: Historical widgets in the chat would update to match the content of the _newest_ response.
+  - **Cause**: All generated GenUI responses were reusing the same static `surfaceId` ("dynamic*surface"). Since GenUI surfaces listen to a stream by ID, \_all* of them (past and present) would update when a new message with that ID arrived.
+  - **Fix**: Implemented **Unique Surface IDs** (timestamp-based) for every response in `RealGenUiContentGenerator`. Each chat bubble now renders a distinct surface.
 
 ### 3. Roadmap
+
 - Created `docs/genui_widget_roadmap.md` outlining future components: Charts, Calendar, Reminders, and Rich Actions.
 
 ## Next Steps
+
 - Implement the "Chart" components (using `fl_chart`).
 - Test the bi-directional sync for Reminders (checking a box updates the state).
 
 ### 4. Future Considerations: Chat History & State Persistence
+
 - **Requirement**: The app currently does not persist chat history between sessions.
 - **Challenge**: Persisting GenUI widgets is complex because they have **internal state** (e.g., a "Permission Denied" toggle or a "Task Completed" checkbox).
 - **Goal**:
-    - Save the structural `A2uiMessage` data (JSON) alongside text.
-    - Track widget state changes so that reloading the history reflects the *last known state* of the interaction, not just the initial generation.
-    - Requires a local database (e.g., Drift/Isar) to store the complex JSON blobs and potentially a "State Snapshot" system.
+  - [x] Save the structural `A2uiMessage` data (JSON) alongside text.
+  - [x] Track widget state changes so that reloading the history reflects the _last known state_ of the interaction, not just the initial generation.
+  - [x] Requires a local database (e.g., Drift/Isar) to store the complex JSON blobs and potentially a "State Snapshot" system.
+
+**Progress Update:**
+
+- **Restored Chat UI**: Re-enabled the `ChatPageChatWidget` to display historical messages.
+- **Data Persistence**: Updated `ChatMessage` (Domain) and `ThreadModel` (Hive) to include a `uiComponents` field for storing GenUI JSON data.
+- **Infrastructure**: Regenerated Hive adapters to support the new schema.
+- **Next Steps**: Implement the rendering logic in `ChatPageChatWidget` to use the stored `uiComponents` to re-inflate GenUI widgets from history.
+
+---
+
+## 5. Service Provider & Model Selection Refactoring
+
+### Session Objective
+
+Refactor the hardcoded default service provider (OpenAI) and model (`gpt-3.5-turbo-0613`) to dynamically detect which service providers have valid API keys and automatically select the first available one (prioritizing Gemini).
+
+### Key Changes & Implementation
+
+#### Model Selection Logic
+
+- **Modified:** [`chat_bloc.dart`](file:///Users/artur/Projekty/robinai/lib/presentation/bloc/chat_bloc.dart)
+  - Updated `_handleInitializeApp` to fetch available models and automatically select the first one
+  - Added comprehensive debug logging to trace initialization flow
+- **Modified:** [`chat_state.dart`](file:///Users/artur/Projekty/robinai/lib/presentation/bloc/chat_state.dart)
+  - Changed hardcoded defaults from `gpt-3.5-turbo-0613` to empty strings
+  - Models and service provider now populated during app initialization
+
+#### Service Provider Detection
+
+- **Modified:** [`chat_bloc.dart`](file:///Users/artur/Projekty/robinai/lib/presentation/bloc/chat_bloc.dart)
+  - Added `AppSettingsService` import
+  - Implemented API key detection in `_handleInitializeApp`
+  - Priority order: Gemini → Groq → Perplexity → Dyrektywa → OpenAI
+  - Auto-selects first provider with valid API key
+- **Technical Decision:** Using priority-based detection ensures user preference (Gemini) takes precedence while maintaining fallback support
+
+### Challenges & Debugging
+
+#### Issue 1: Changes Not Visible After Implementation
+
+- **Symptoms:** Code changes were correctly applied, but UI still showed OpenAI and deprecated model
+- **Hypothesis:** Hot reload wasn't sufficient, needed full restart
+- **Initial Debugging:** Added debug logging - no output appeared in console
+- **Root Cause:** `InitializeAppEvent` was never being dispatched
+
+#### Issue 2: Wrong Entry Point Modified
+
+- **Symptoms:** No debug logs appearing despite adding print statements
+- **Investigation:** Discovered two `main()` functions in the project:
+  - [`lib/presentation/pages/main_page.dart`](file:///Users/artur/Projekty/robinai/lib/presentation/pages/main_page.dart) - Old/unused entry point
+  - [`lib/main.dart`](file:///Users/artur/Projekty/robinai/lib/main.dart) - Actual app entry point
+- **Initial Fix Attempt:** Added `InitializeAppEvent` to `main_page.dart` in `initState()` - but this was before `BlocProvider` existed in widget tree
+- **Final Solution:** Added `InitializeAppEvent` dispatch in the `BlocProvider.create` callback in the actual [`lib/main.dart`](file:///Users/artur/Projekty/robinai/lib/main.dart) file
+- **Takeaway:** Always verify which file is the actual entry point. Multiple `main()` functions can exist in a Flutter project, leading to confusion about where initialization occurs.
+
+### Current Status
+
+- [x] Service provider auto-detection based on API keys
+- [x] Model auto-selection for selected provider
+- [x] Gemini prioritization
+- [x] Debug logging for troubleshooting
+- [x] Proper initialization flow in main entry point
+
+### Next Steps
+
+- [ ] Test with actual Gemini API key configured
+- [ ] Remove debug logging once verified working
+- [ ] Consider persisting last-used service provider to user preferences
+- [ ] Add error handling for case where no API keys are configured
+
+---
+
+## 6. GenUI History Rendering & Chat UI Improvements
+
+### Session Objective
+
+Implement rendering of GenUI widgets from persisted `uiComponents` data within chat history, enabling users to see interactive GenUI elements (InfoCards, StatusBadges) when loading past conversations.
+
+### Key Changes & Implementation
+
+#### Custom Chat Widget Implementation
+
+- **Replaced:** `flutter_chat_ui` with custom implementation in [`chat_page_chat_widget.dart`](file:///Users/artur/Projekty/robinai/lib/presentation/pages/chat_page/chat_page_chat_widget.dart)
+  - **Reason:** `flutter_chat_ui` package had fatal API mismatch (analyzer rejected core parameters like `messages`, `onSendPressed`, requiring non-existent `ChatController`)
+  - **Solution:** Built custom chat UI using standard Flutter widgets (`ListView.builder`, `Container`, `TextField`)
+  - **Technical Decision:** Full control over rendering allows seamless GenUI integration without fighting external dependency issues
+- **Features:**
+  - Message bubbles with proper styling (Teal for user, Sage for bot)
+  - Reverse chronological display (`reverse: true` on ListView)
+  - Integrated `GenUiHistoryWidget` rendering alongside text
+
+#### GenUI History Components
+
+- **Created:** [`history_content_generator.dart`](file:///Users/artur/Projekty/robinai/lib/presentation/genui/history_content_generator.dart)
+  - Implements `ContentGenerator` interface from `genui` package
+  - Re-emits saved `uiComponents` as `SurfaceUpdate` and `BeginRendering` events
+  - Generates unique surface IDs to prevent state collision
+- **Created:** [`gen_ui_history_widget.dart`](file:///Users/artur/Projekty/robinai/lib/presentation/genui/widgets/gen_ui_history_widget.dart)
+  - Stateful widget managing `GenUiConversation` and `A2uiMessageProcessor`
+  - Hydrates stored widget definitions into live `GenUiSurface`
+  - Listens for surface ID from conversation stream
+
+#### Robust JSON Parsing
+
+- **Enhanced:** [`chat_message_repository.dart`](file:///Users/artur/Projekty/robinai/lib/data/repository/chat_message_repository.dart)
+  - **Issue:** LLM responses varied wildly: "Certainly! `json {...}`", plain JSON, or mixed text+JSON
+  - **Solution:** Multi-stage regex parsing:
+    1. Check for ` ```json ... ``` ` code blocks → extract inner content
+    2. Fallback to finding first `{` and last `}` in response
+    3. Strip outer code fences that wrap entire markdown responses
+  - **Technical Decision:** Regex approach handles conversational filler gracefully vs. strict parsing
+
+#### GenUI System Prompt Injection
+
+- **Modified:** [`chat_network.dart`](file:///Users/artur/Projekty/robinai/lib/data/datasources/chat_network.dart)
+  - Appends GenUI instructions to `context.text` system prompt
+  - Defines JSON response schema and available components (InfoCard, StatusBadge)
+  - **Why:** Without explicit instructions, LLM doesn't know to generate `ui_components` field
+
+#### Message History Order Fix
+
+- **Modified:** [`chat_bloc.dart`](file:///Users/artur/Projekty/robinai/lib/presentation/bloc/chat_bloc.dart) (line 73)
+  - **Issue:** LLM received messages in reverse chronological order, causing confusion about "message numbering"
+  - **Root Cause:** `ChatBloc` stores messages as `[Newest, Older, Oldest]` (inserts at index 0)
+  - **Solution:** Reverse list before passing to `sendMessageUseCase.call()` → LLM now receives `[Oldest, ..., Newest]`
+- **Modified:** [`chat_page_chat_widget.dart`](file:///Users/artur/Projekty/robinai/lib/presentation/pages/chat_page/chat_page_chat_widget.dart)
+  - Removed erroneous `.reversed` that was double-reversing the display order
+
+#### Text Selection & Markdown Rendering
+
+- **Added:** `flutter_markdown` dependency via `flutter pub add`
+- **Implemented:** `MarkdownBody` in chat bubbles (replaced `SelectableText`)
+  - Supports bold (`**text**`), lists (`*`, `1.`), headings (`#`), code blocks, blockquotes
+  - `selectable: true` preserves copy-paste functionality
+- **Custom Styling:** `MarkdownStyleSheet` with:
+  - Text colors matching bubble backgrounds (white on teal, black on sage)
+  - Semi-transparent code block backgrounds (`Colors.black26`/`Colors.black12`)
+  - Proper monospace font for inline code
+  - **Why:** Default white backgrounds for code/quotes clashed with colored bubbles
+
+### Challenges & Debugging
+
+#### Issue 1: `flutter_chat_ui` API Mismatch
+
+- **Symptoms:** Analyzer errors claiming `messages`, `onSendPressed`, `user` parameters "aren't defined" despite being in documented API
+- **Hypothesis:** Package version conflict or corrupted cache
+- **Investigation:**
+  - Verified `pubspec.lock` showed `flutter_chat_ui: 2.11.1` (correct version)
+  - Ran `flutter clean`, `flutter pub get` → no change
+  - Created `test/dependency_test.dart` probe → confirmed analyzer rejection
+- **Root Cause:** Version mismatch between installed package and local SDK/cache state (unrecoverable)
+- **Solution:** Abandoned `flutter_chat_ui`, built custom widget
+- **Takeaway:** External UI dependencies can block critical features; custom implementation gives full control
+
+#### Issue 2: Chat History Order Confusion
+
+- **Symptoms:** User asked LLM to "list messages" and numbering was backwards (newest = 1, oldest = 10)
+- **Hypothesis:** Display order was correct, but API context was reversed
+- **Debugging:** Traced `ChatBloc._handleSendMessage` → messages stored as `insert(0, ...)` → newest first
+- **Solution:** Reverse before API call: `updatedThread.messages.reversed.toList()`
+- **Takeaway:** Different parts of the system need different orderings (UI wants newest-at-bottom, LLM wants chronological)
+
+#### Issue 3: Raw Markdown Showing in Chat
+
+- **Symptoms:** First message rendered perfectly, second message showed literal `# Heading` text
+- **Investigation:** Second LLM response wrapped entire markdown in ` ``` ` code fence
+- **Root Cause:** When teaching markdown examples, LLM wraps content in code blocks for "display purposes"
+- **Solution:** Added outer code fence stripping in `ChatMessageRepository`:
+  ````dart
+  final outerCodeFenceRegex = RegExp(r'^```(?:[a-z]*\n)?([\s\S]*?)\n?```$');
+  if (outerMatch != null) content = outerMatch.group(1);
+  ````
+- **Takeaway:** LLMs will "over-format" when demonstrating formatting; post-processing needed
+
+#### Issue 4: Code Block White Boxes
+
+- **Symptoms:** Markdown rendered but code blocks/quotes had jarring white backgrounds
+- **Root Cause:** `MarkdownStyleSheet.fromTheme()` uses Material theme defaults (white backgrounds)
+- **Solution:** Custom `MarkdownStyleSheet` with:
+  - `codeblockDecoration: BoxDecoration(color: isUser ? Colors.black26 : Colors.black12)`
+  - `blockquoteDecoration: BoxDecoration(color: isUser ? Colors.black26 : Colors.black12)`
+- **Takeaway:** Default markdown styles assume white backgrounds; custom chat bubbles need custom styles
+
+### Current Status
+
+- [x] Custom chat widget with GenUI support
+- [x] GenUI history hydration from `uiComponents`
+- [x] Robust JSON parsing (handles conversational filler)
+- [x] Correct message ordering (UI and LLM context)
+- [x] Text selection/copy support
+- [x] Markdown rendering with proper styling
+- [x] System prompt injection for GenUI generation
+
+### Next Steps
+
+- [ ] Implement state snapshotting for interactive widgets (checkboxes, toggles)
+- [ ] Add image upload/display support in custom chat widget
+- [ ] Consider caching `GenUiConversation` instances to improve scroll performance
+- [ ] Add loading indicator while GenUI hydrates from history
