feat: Update dependencies and add RouteCard widget for route visualization with map integration using flutter_map and latlong2 packages.

--- a/_log/2026-01-18.md
+++ b/_log/2026-01-18.md
@@ -2,7 +2,7 @@
 
 ## 1. Session Objective
 
-Fix iOS EventKit crash during calendar event creation and confirm calendar events can be added without opening the Calendar app.
+Fix iOS EventKit crash during calendar event creation, implement MCP server testing and debugging, create RouteCard widget with map visualization, and resolve tool call loop issues.
 
 ## 2. Key Changes & Implementation
 
@@ -56,6 +56,7 @@ Fix iOS EventKit crash during calendar event creation and confirm calendar event
 ## 5. Next Steps
 
 - [x] Calendar event feature complete
+- [ ] **MCP Server Integration Testing** - Tool call loop issue needs further investigation (works randomly, may be related to LLM response parsing or conversation context)
 - [ ] Consider reducing debug logging in production builds
 
 ## 6. Files Modified
@@ -63,3 +64,129 @@ Fix iOS EventKit crash during calendar event creation and confirm calendar event
 - `lib/presentation/genui/widgets/event_card.dart` - Fixed iOS crashes, added attendee handling, iOS info hint
 - `lib/data/datasources/genui/genui_system_prompt_builder.dart` - Added time awareness
 - `lib/data/datasources/genui/genui_system_prompt.dart` - Updated EventCard documentation with iOS attendee limitation note
+
+---
+
+## 7. MCP Server Integration & RouteCard Implementation (Afternoon Session)
+
+### MCP Server Connection Testing & Debugging
+
+- **Modified:** `lib/data/datasources/mcp/http_mcp_transport.dart`
+  - Added comprehensive debug logging for HTTP requests/responses (later removed for production)
+  - Logged request IDs, method, URL, headers, body, response status, timing
+  - Added detailed error logging with stack traces
+- **Modified:** `lib/data/datasources/mcp/mcp_client.dart`
+  - Added step-by-step logging throughout initialization, tool listing, and connection testing
+  - Fixed `initialize()` method to properly return server info from transport response
+  - Added graceful handling for unsupported `notifications/initialized` (some MCP servers don't support it)
+- **Modified:** `lib/presentation/config/services/mcp_server_service.dart`
+  - Added logging to connection testing flow
+  - Fixed `testConnection()` to accept `persistResult` parameter to prevent saving test configs as real servers
+- **Modified:** `lib/presentation/pages/mcp_servers_page.dart`
+  - Updated test connection to use `persistResult: false` to prevent duplicate server entries during testing
+- **Technical Decision:** Removed all debug logging after initial testing to reduce console noise. MCP connection now works with Google Maps MCP server (HTTP transport with bearer token auth).
+
+### RouteCard Widget with Map Visualization
+
+- **Added:** `lib/presentation/genui/widgets/route_card.dart`
+  - New GenUI widget for displaying route information with embedded map preview
+  - Uses `flutter_map` with OpenStreetMap tiles for route visualization
+  - Displays route polyline with green/red markers for origin/destination
+  - Shows distance, duration, and travel mode
+  - Two clickable graphics (not buttons) for opening in Google Maps and Apple Maps
+  - Styled rectangles with proper overflow handling
+- **Added:** Dependencies to `pubspec.yaml`:
+  - `flutter_map: ^7.0.2` (OpenStreetMap integration)
+  - `latlong2: ^0.9.1` (Latitude/longitude utilities)
+- **Modified:** `lib/data/datasources/mcp/tool_result_formatter.dart`
+  - Added `_tryFormatRouteResult()` to automatically detect route results from MCP tool responses
+  - Extracts polyline, origin, destination from tool results
+  - Passes tool call arguments to formatter for origin/destination extraction
+  - Added `preventToolCalls` flag to prevent recursive tool calls during formatting
+- **Modified:** `lib/data/repository/chat_message_repository.dart`
+  - Passes tool call arguments to formatter for route data extraction
+  - Added `_isAcknowledgmentMessage()` to prevent tool calls for simple acknowledgments ("thank you", "ok", "dzięki", etc.)
+  - Added `preventToolCalls` flag when formatting tool results
+- **Modified:** `lib/presentation/genui/catalog.dart`
+  - Registered RouteCard component with schema including polyline, origin, destination
+- **Modified:** `lib/data/datasources/genui/genui_system_prompt.dart`
+  - Updated RouteCard documentation with new properties
+- **Technical Decision:** Use OpenStreetMap via flutter_map for embedded route preview (no API keys required). Google Maps and Apple Maps buttons open external apps via URL schemes. Direct route result formatting bypasses LLM for faster response.
+
+### Tool Call Loop Prevention
+
+- **Modified:** `lib/data/datasources/mcp/tool_result_formatter.dart`
+  - Added `preventToolCalls` parameter to `formatResult()` method
+  - Updated formatting prompt to explicitly instruct LLM not to include tool calls
+  - Added safety check to remove any `tool_call` from formatted response
+- **Modified:** `lib/data/repository/chat_message_repository.dart`
+  - Added acknowledgment message detection to skip tool call parsing for simple "thank you" messages
+  - Prevents tool execution for acknowledgments in multiple languages (English, Polish)
+- **Technical Decision:** Multiple layers of protection: acknowledgment detection, explicit prompt instructions, and response sanitization to prevent recursive tool calls.
+
+## 8. Challenges & Debugging (MCP Session)
+
+### MCP Server Connection Issues
+
+- **Symptoms:** MCP server works with MCP Inspector but not with app
+- **Hypothesis:** Missing debugging made it impossible to identify where connection failed
+- **Solution:** Added comprehensive logging throughout MCP transport, client, and service layers
+- **Takeaway:** Detailed logging essential for debugging remote protocol connections
+
+### Unsupported notifications/initialized Method
+
+- **Symptoms:** `Method not found: notifications/initialized` error during initialization
+- **Hypothesis:** Some MCP servers don't support the initialized notification
+- **Solution:** Added graceful error handling - if notification fails with -32601 error code, continue initialization
+- **Takeaway:** MCP protocol implementations vary; handle optional features gracefully
+
+### Duplicate Server Entries During Testing
+
+- **Symptoms:** Each test connection attempt created a new server entry in the list
+- **Hypothesis:** Test connection was saving config even during testing phase
+- **Solution:** Added `persistResult` parameter to `testConnection()` - test connections don't save, only real saves do
+- **Takeaway:** Separate test operations from persistence operations
+
+### Tool Call Loop Issue
+
+- **Symptoms:** After user says "thank you", assistant keeps generating route cards in a loop
+- **Hypothesis:** LLM response formatting was triggering recursive tool calls, or LLM was calling tools for acknowledgments
+- **Solution Attempts:**
+  1. Added `preventToolCalls` flag to formatter
+  2. Added explicit prompt instructions to not include tool calls
+  3. Added acknowledgment message detection to skip tool parsing
+  4. Added safety check to remove tool calls from formatted responses
+- **Current Status:** **PARTIALLY RESOLVED** - Works randomly, needs further investigation
+- **Takeaway:** Tool call loops can occur at multiple levels (LLM response, formatting, conversation context). Need to investigate if issue is in response parsing, conversation history context, or LLM behavior.
+
+### RouteCard Button Overflow
+
+- **Symptoms:** "RIGHT OVERFLOWED BY 44 PIXELS" error on route card buttons
+- **Hypothesis:** Button text too long or padding too large for available space
+- **Solution:** Reduced padding, made text `Flexible` with `overflow: TextOverflow.ellipsis`, reduced icon size
+- **Takeaway:** Always use `Flexible` or `Expanded` with text overflow handling in Row widgets
+
+## 9. Current Status (End of Day)
+
+- [x] MCP server connection working (Google Maps MCP server tested successfully)
+- [x] RouteCard widget implemented with map preview
+- [x] OpenStreetMap integration working
+- [x] Google Maps and Apple Maps buttons functional
+- [x] Tool result formatting working for route results
+- [x] Debug logging added and removed (connection debugging complete)
+- [ ] **Tool call loop issue** - Partially resolved but works randomly, needs further investigation
+- [ ] Route polyline not always included (depends on LLM requesting `include_polyline: true`)
+
+## 10. Files Modified (MCP Session)
+
+- `lib/data/datasources/mcp/http_mcp_transport.dart` - Added/removed debug logging, fixed initialize return type
+- `lib/data/datasources/mcp/mcp_client.dart` - Added logging, fixed initialize() to return server info, handle unsupported notifications
+- `lib/data/datasources/mcp/mcp_transport.dart` - Updated interface to return Map from initialize()
+- `lib/presentation/config/services/mcp_server_service.dart` - Added logging, fixed testConnection to not persist test configs
+- `lib/presentation/pages/mcp_servers_page.dart` - Updated to use persistResult: false for test connections
+- `lib/presentation/genui/widgets/route_card.dart` - **NEW FILE** - Route card with map preview and external map buttons
+- `lib/data/datasources/mcp/tool_result_formatter.dart` - Added route result detection, preventToolCalls flag, tool call arguments extraction
+- `lib/data/repository/chat_message_repository.dart` - Added acknowledgment detection, preventToolCalls flag, tool arguments passing
+- `lib/presentation/genui/catalog.dart` - Registered RouteCard component
+- `lib/data/datasources/genui/genui_system_prompt.dart` - Updated RouteCard documentation
+- `pubspec.yaml` - Added flutter_map and latlong2 dependencies
